map through preslot

--- a/src/styles/spectate.scss
+++ b/src/styles/spectate.scss
@@ -312,6 +312,11 @@ header {
   background: none;
 }
 
+.mapgraphic{
+  margin-top:7.5%;
+  margin-bottom:7.5%;
+}
+
 #navbar:not(.show-nav-links) {
   .hamburger,
   .hamburger-btn:after,
